# ias-client-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  INSTALL  README.md  ias-client-cpp.podspec  mapping_ias.json
src/: CMakeLists.txt  android_connector.cpp  android_connector.h  callback.cpp  callback.h  header.h  ias_client.cpp  ios_connector.h  ios_connector.mm  measurement.cpp  measurement.h  timer.cpp  timer.h  type.h
src/tests/: download.cpp  download.h  ip.cpp  ip.h  ping.cpp  ping.h  upload.cpp  upload.h  upload_sender.cpp  upload_sender.h
